Proposals to fix CSS issues (#284)
* Height 100% on root element to have main element auto-fill the rest

* Refactor SCSS dark theme selectors

* Fix Train intro image too big on 9/16 phone devices

* Eros email and no-wrap on About links

* Whoopsi fixed size of image on Train view for full desktop screen

* Removed unused imports

--- a/client/src/styles/pages/_HomePage.scss
+++ b/client/src/styles/pages/_HomePage.scss
@@ -22,6 +22,10 @@
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.25);
+
+        body.dark & {
+          background: rgba(0, 0, 0, 0.4);
+        }
       }
     }
 
@@ -68,6 +72,10 @@
       height: 4.2rem;
       overflow: hidden;
 
+      body.dark & {
+        color: #ffffff;
+      }
+
       .animation,
       img {
         display: inline-block;
@@ -102,10 +110,22 @@
         flex-grow: 1;
         position: relative;
 
+        body.dark & {
+          background: $color-gray-dark;
+
+          p {
+            color: #dadada;
+          }
+        }
+
         h3 {
           font-size: 1.2rem;
           margin-bottom: 0.4rem;
           color: black;
+
+          body.dark & {
+            color: white;
+          }
         }
 
         p.time {
@@ -156,30 +176,6 @@
 
   .avatar {
     flex-shrink: 0;
-  }
-}
-
-body.dark #homepage {
-  #header-background:before {
-    background: rgba(0, 0, 0, 0.4);
-  }
-
-  section {
-    h2 {
-      color: #ffffff;
-    }
-
-    .challenges-text {
-      background: $color-gray-dark;
-
-      h3 {
-        color: white;
-      }
-
-      p {
-        color: #dadada;
-      }
-    }
   }
 }
 
